[SR-13383][Windows] Don't crash on WSAEventSelect fail while unregistering dispatch_source